fixed the overflow

--- a/src/styles.css
+++ b/src/styles.css
@@ -498,6 +498,9 @@ p {
 
 
 @media (max-width:667px){
+  body{
+    overflow-x:hidden
+  }
   .introduction{
     max-width: 100%;
     max-height: 250px;
@@ -558,5 +561,9 @@ p {
 .tech{
     max-width: 50px;
     padding-bottom: 20px;
+}
+.mt-5{
+  margin-bottom: 1rem;
+  margin-top: 1rem !important;
 }
 }
